(raf) Implemented h/w double buffering to go along the s/w double buffering (more like triple buffering). This solves the flickering of danzeff.
(raf) Slowed down the mouse pointer a bit. Also made this a configuration item (mouse_speed_factor).
(raf) Renamed config item psp_bb_to_fb_factor to screen_zoom_factor
BUG FIXES
(raf) Cleaned up the call to the input handler. This resolved some timing issues that were causing the graphic glitches (menu screens not clearing up correctly).

links-2.1pre23 PSP r1222 (2006-08-04)
NEW FEATURES
(raf) Cookie save/restore patch from cvs.pld.org.pl/SOURCES/links2-cookies-save.patch?rev=1.2 applied.
(raf) Merged to 2.1pre23 See Changelog.orig
(raf) Made psp_bb_to_fb_factor a configurable parameter in links.cfg (default=1, set to 2 to enable zoom mode)
(raf) Also changed default font to 12 from 24. (Change to 24 in html.cfg if want to use zoom mode)
BUG FIXES
(raf) Reverted UP/DOWN behavior (user requested). (R+UP/DOWN still does page up/down, though).

links-2.1pre22 PSP r1214 (2006-07-08)
NEW FEATURES
(raf) Updates to pspgu driver: 
	-Default resolution is now 960x544 (Its scaled down to the PSP's 480x272)
	-Links scaling is now disabled (as it used too much memory, and was one of the main culprits of memory errors)
	-Font size changed from 12 to 24, so it is readable without zoom (at 960x544)
	-Zoom (along with new virtual resolution of 960x544 implemented using a kind of double buffering).
(raf) New button mappings: 
	UP/DOWN = scroll up/scroll down (former R+UP/DOWN)
	R+UP/DOWN = page up/page down
	L (held) = zoom (while L is held). Use analog stick to move around.
	L+CROSS = toggles zoom lock. (Once locked, the analog will control the mouse. Use L+analog to move zoom window).
BUG FIXES

links-2.1pre22 PSP r1206 (2006-07-03)
NEW FEATURES
(raf) Moved the "None" WiFi connection to the bottom of the list.